Lab2 With the bonus task

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/eventbooking}">
+<form th:method="POST" th:action="@{/eventBooking}">
     <label>Enter name
         <input type="text" name="user_the_name">
     </label>
