--- a/src/main/resources/templates/listEvents.html
+++ b/src/main/resources/templates/listEvents.html
@@ -17,8 +17,9 @@
 <main>
     <h2>Choose an event:</h2>
 
+    <form th:method="POST" th:action="@{/eventBooking}">
     <ul style="list-style: none">
-        <li th:each=" elem : ${list}"> <input type="radio" th:value="${elem}" name="radio_b" th:text="' Name: '+${elem.name}+' Description: '+${elem.description}+' Rating: '+${elem.popularityScore}"></li>
+        <li th:each=" elem : ${list}"> <input type="radio" th:value="${elem.name}" name="radio_b" th:text="' Name: '+${elem.name}+' Description: '+${elem.description}+' Rating: '+${elem.popularityScore}"></li>
     </ul>
     <!-- Display radio buttons for each event,
             the value should be the event name
@@ -28,7 +29,7 @@
     <input type="number" name="numTickets" min="1" max="10"><br/>
     <br/>
 
-    <form th:method="GET" th:action="@{/eventBooking}">
+
         <input type="submit" value="Submit">
     </form>
 
